--- a/app/src/main/res/layout/pricing_layout.xml
+++ b/app/src/main/res/layout/pricing_layout.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="8dp"
+    android:paddingBottom="@dimen/card_padding_half"
+    android:paddingLeft="@dimen/card_padding"
+    android:paddingRight="@dimen/card_padding"
+    android:paddingTop="@dimen/card_padding_half"
     android:weightSum="1">
 
     <LinearLayout
@@ -18,15 +18,15 @@
 
         <ImageView
             android:id="@+id/iv_icon"
-            android:layout_width="24dp"
-            android:layout_height="24dp" />
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size" />
 
         <TextView
             android:id="@+id/tv_points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/card_padding"
             android:textAppearance="@style/secondaryText" />
     </LinearLayout>
 
